dev/apps/ingress/fundit-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fundit
  namespace: dev
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-northeast-2:899957568205:certificate/6d1db5a3-306e-4d88-81fb-fc59f3418391"
    alb.ingress.kubernetes.io/group.name: fundit-alb
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: fundit-gateway-svc
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fundit-frontend-svc
                port:
                  number: 80
